# 2021-09-26-Directory-Comparer

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: on tag deploy on Github.yaml  on-tag-create-release.yaml
src/: main.py  main_outer.py
